--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Parcial1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Registro" Height="250" Width="390">
     <Grid>
+
+        <StackPanel> 
+            <Menu> 
+                <MenuItem Header="Registros" >
+                    <MenuItem Header="Registro" x:Name="rLibros" Click ="RegistroMenuItem_Click" /> 
+                    </MenuItem>
+
+                <MenuItem Header="Consultas" >
+                    <MenuItem Header="Consulta" x:Name="cLibros" Click ="ConsultaMenuItem_Click" />  
+                    </MenuItem>
+            </Menu>
+
+        </StackPanel>
 
     </Grid>
 </Window>
