--- a/UI/Registros/rProductos.xaml
+++ b/UI/Registros/rProductos.xaml
@@ -30,7 +30,7 @@
                 <TextBox x:Name= "CostoTextBox" Text ="{Binding Costo}" Width="190" />
 
                 <Label Content="Valor Inventario:"/>
-                <TextBox x:Name= "ValorInventarioTextBox" Text ="{Binding ValorInventario}" IsReadOnly="True" Width="190" />
+                <TextBox x:Name= "ValorInventarioTextBox" Text ="{Binding ValorInventario}" Background = "#FFC0C0C0" IsReadOnly="True" Width="190" />
 
                 
 
