--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:Parcial1"
         mc:Ignorable="d"
-        Title="Registro" Height="250" Width="390">
+        Title="Registro" Height="300" Width="390">
     <Grid>
 
         <StackPanel> 
